syntax = "proto3";
option go_package = "./;pbrpc";
package endpoint;

service Cello {
  rpc CreateEndpoint (CreateEndpointRequest) returns (CreateEndpointResponse) {
  }
  rpc DeleteEndpoint (DeleteEndpointRequest) returns (DeleteEndpointResponse) {
  }
  rpc GetPodMetaInfo (GetPodMetaRequest) returns (GetPodMetaResponse) {
  }
  rpc PatchPodAnnotation (PatchPodAnnotationRequest) returns (PatchPodAnnotationResponse) {
  }
}

// 详细请求
message CreateEndpointRequest {
  string Name = 1;
  string Namespace = 2;
  string InfraContainerId = 3;
  string IfName = 4;
  string NetNs = 5;
}

message IPSet {
  string IPv4 = 1;
  string IPv6 = 2;
}

message Route {
  string Dst = 1;
}

message NetworkInterface {
  ENI ENI = 1;
  string IPv4Addr = 2; // ipNet
  string IPv6Addr = 3; // ipNet
  string IfName   = 4;
  repeated Route ExtraRoutes = 5;
  bool DefaultRoute = 6;
}

enum IfType {
  TypeENIShare = 0;
  TypeENIExclusive = 1;
}

message CreateEndpointResponse {
  IfType IfType = 1;
  repeated NetworkInterface Interfaces = 2;
}

message ENI {
  string ID = 1;
  string Mac = 2;
  string IPv4Gateway = 3;
  string IPv6Gateway = 4;
  // Deprecated
  string GatewayMac = 5;
  // Deprecated
  IPSet  Subnet = 6; // IPNet
  bool   Trunk = 7; // use trunk ?
  uint32 Vid = 8;
  string SlaveMac = 9; // for vlan slave device
}

message DeleteEndpointRequest {
  string Name = 1;
  string Namespace = 2;
  string InfraContainerId = 3;
}

message DeleteEndpointResponse {
}

message GetPodMetaRequest {
  string Name = 1;
  string Namespace = 2;
  string InfraContainerId = 3;
}

message GetPodMetaResponse {
  map<string, string> Annotations = 1;
}

message PatchPodAnnotationRequest {
  string Name = 1;
  string Namespace = 2;
  map<string, string> Annotations = 3;
}

message PatchPodAnnotationResponse {
}
